--- a/CodeAssessment.React/CodeAssessment.React.csproj
+++ b/CodeAssessment.React/CodeAssessment.React.csproj
@@ -19,6 +19,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="RiskFirst.Hateoas" Version="3.1.1" />
+    <PackageReference Include="RiskFirst.Hateoas.Models" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
