--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="RiskFirst.Hateoas.Models" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
